<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:id="@+id/cl_info_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/followers"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/icon_meditick_white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/iv_meditick"
        />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_meditick"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_login_logo"
        android:id="@+id/iv_login_logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_to_meditick"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_logo"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/tv_welcome"
        android:textColor="@color/hhcplus_text"/>


    <TextView
        android:id="@+id/please_prov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_phone_number"
        android:textColor="@color/hhcplus_text"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="14dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/please_prov"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:clickable="true"
        android:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        android:focusable="true"
        android:text="@string/continue_text"
        android:textAppearance="@style/text"
        android:textColor="@color/hhcplus_text"
        android:textSize="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>