<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/user_summary_content_hhc_plus">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Prescription History"
        android:textSize="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF"
        android:id="@+id/name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View all your prescriptions here"
        android:textSize="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FFFFFF">

    </TextView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/half_round_hhc_plus"
        >

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rectangle_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="22dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            >

            <View
                android:id="@+id/background"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="27dp"
                android:layout_marginStart="34dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/background"
                />

            <TextView
                android:id="@+id/mr_ram_pras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="36dp"
                android:layout_marginStart="114dp"
                android:text="@string/mr_ram_pras"
                android:textAppearance="@style/mr_ram_pras"
                android:lineSpacingExtra="-1sp"
                android:gravity="center_horizontal|center_vertical"
                />

            <TextView
                android:id="@+id/male_37_yrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="114dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="63dp"
                android:text="@string/male_37_yrs"
                android:textAppearance="@style/male_37_yrs"
                android:lineSpacingExtra="0sp"
                android:gravity="center_horizontal|center_vertical"
                />

            <View
                android:id="@+id/line_8"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="106dp"
                android:background="@drawable/line_8"
                />

            <View
                android:id="@+id/line_2"
                android:layout_width="2dp"
                android:layout_height="112dp"
                android:layout_alignParentLeft="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="169dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="106dp"
                android:background="@drawable/line_2"
                android:alpha="0.9"
                />

            <TextView
                android:id="@+id/consulting_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="137dp"
                android:text="@string/consulting_"
                android:textAppearance="@style/consulting_"
                android:lineSpacingExtra="-3sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/started_tim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="198dp"
                android:layout_marginTop="137dp"
                android:text="@string/started_tim"
                android:textAppearance="@style/started_tim"
                android:lineSpacingExtra="-3sp"
                android:gravity="top"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/consulting_"
                android:layout_marginStart="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/button1"
                >

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textAppearance="@style/text1"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/consulting_"
                android:layout_marginStart="190dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/button1"
                >

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2022"
                    android:textAppearance="@style/text1"
                    android:lineSpacingExtra="0sp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/line_9"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="228dp"
                android:background="@drawable/line_8"
                />

            <TextView
                android:id="@+id/medical_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_9"
                android:layout_marginStart="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/medical_con"
                android:textAppearance="@style/medical_con"
                android:lineSpacingExtra="-3sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/has_been_di"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medical_con"
                android:layout_marginStart="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:text="@string/has_been_di"
                android:textAppearance="@style/has_been_di"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/has_reporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/has_been_di"
                android:layout_marginStart="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:text="@string/has_reporte"
                android:textAppearance="@style/has_reporte"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:gravity="top"
                />

            <View
                android:id="@+id/line_10"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/has_reporte"
                android:layout_marginStart="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="17dp"
                android:background="@drawable/line_8"
                />

            <TextView
                android:id="@+id/prescribed_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_10"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:text="@string/prescribed_"
                android:textAppearance="@style/prescribed_"
                android:lineSpacingExtra="-3sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prescribed_"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp"
                android:textAppearance="@style/label"
                android:lineSpacingExtra="-1sp"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/label"
                android:lineSpacingExtra="-1sp"
                android:gravity="center_vertical"
                />

            <View
                android:id="@+id/line_11"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label1"
                android:layout_marginStart="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_8"
                />

            <TextView
                android:id="@+id/medication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_11"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:text="@string/medication"
                android:textAppearance="@style/medication"
                android:lineSpacingExtra="-3sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/paracetamol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medication"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_alignParentTop="true"
                android:text="@string/paracetamol"
                android:textAppearance="@style/paracetamol"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/once_8_30_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paracetamol"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:text="@string/once_8_30_a"
                android:textAppearance="@style/once_8_30_a"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/paracetamol1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/once_8_30_a"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_alignParentTop="true"
                android:text="@string/paracetamol"
                android:textAppearance="@style/paracetamol"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:gravity="top"
                />

            <TextView
                android:id="@+id/once_8_30_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paracetamol1"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:text="@string/once_8_30_a"
                android:textAppearance="@style/once_8_30_a"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:gravity="top"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <include layout="@layout/loading"/>


</androidx.constraintlayout.widget.ConstraintLayout>